# PaddleOCRTest

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  temp.Dockerfile
api/: app.py  main.py
api/routes/: ocr.py
core/: config.py  ocr.py
paddleocr-core/: .dockerignore  Dockerfile  pyproject.toml
paddleocr-core/api/: app.py  main.py
paddleocr-core/api/routes/: ocr.py
paddleocr-core/core/: config.py  ocr.py
serving/: Dockerfile  main.py  paddle_ocr.py  pyproject.toml  serve_config.yaml
